# babyseg

./: .gitignore  pyproject.toml  requirements.txt
babyseg/: __init__.py  config.py  data.py  eval.py  nn.py  state.py
config/: babyseg.v1.json  defaults.json
docker/: Dockerfile  build.sh  convert.sh  entrypoint.py  hub.md  wrapper.py
hooks/: pre-commit
labels/: baby.all.json  baby.eval.json  baby.loss.json
scripts/: download.py  setup.sh
tests/system/: test_entrypoint.py  test_install.py  test_scripts.py  test_wrapper.py
tests/unit/: test_config.py  test_eval.py  test_init.py
